--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@
 	position:absolute;
 	bottom: 0;
 	width: 100%;
-	height: 15%;
+	height: 150px;
 	text-align: center;
 	font-family: 'Poppins', sans-serif;
 	background-image: linear-gradient(white, #C0C0C0);
@@ -40,7 +40,7 @@
 
 .container, .row{
 	padding: 25px;
-	padding-bottom: 15%;
+	padding-bottom: 150px;
 }
 
 .container, .row img{
