--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
 
 .navbar a {
 	color: #000000;
@@ -22,7 +22,7 @@
 	background-image: linear-gradient(#C0C0C0, white);
 	padding:15px;
 }
-
+*/
 .footer {
 	position:absolute;
 	bottom: 0;
@@ -63,7 +63,7 @@ table {
 	margin: 25px;
 	text-align: center;
 }
-
+/*
 @keyframes grow {
   from {font-size: 20px;}
   to {font-size: 25px;}
@@ -73,7 +73,7 @@ table {
   from {font-size: 25px;}
   to {font-size: 20px;}
 }
-
+*/
 @keyframes fade-in{
   from {opacity:0; margin-top:150px;}
   to {opacity: 1; margin-top:0px;}
